@@ -9,6 +9,7 @@ Version 0.2.beta2
 - Fixed: Variant price should not show "From" when all variants have the same price
 - Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
 - Fixed: Printing order PDF throwed an exception
+- Fixed: Use first available product type if no default/fallback is set
 
 Version 0.2.beta1 (2010-08-25)
 ------------------------------
